# wxWidgetsTaskCRUD

./: Application.cpp  Application.hpp  CMakeLists.txt  MainFrame.cpp  MainFrame.hpp  MainView.cpp  MainView.hpp  Task.hpp  TaskCreateView.cpp  TaskCreateView.hpp  TaskIndexView.cpp  TaskIndexView.hpp  main.cpp
app/: Application.cpp  CMakeLists.txt
model/: CMakeLists.txt  TaskIdDuplicateException.hpp  TaskNotFoundException.cpp  TaskNotFoundException.hpp
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp  CMakeLists.txt
src/model/: CMakeLists.txt  Task.hpp  TaskIdDuplicateException.cpp  TaskRepository.cpp  TaskRepository.hpp
src/view/: BaseView.hpp  CMakeLists.txt  MainView.cpp  TaskIndexView.cpp  TaskIndexView.hpp
src/view/common/: BaseView.cpp  BaseView.hpp  CMakeLists.txt
src/view/main/: CMakeLists.txt  MainView.hpp
src/view/task.create/: CMakeLists.txt  TaskCreateView.cpp  TaskCreateView.hpp
src/view/task.index/: CMakeLists.txt  ListViewOfTasks.cpp  ListViewOfTasks.hpp  OperationButtonsPanel.cpp  OperationButtonsPanel.hpp  SelectedTaskDetailsPanel.cpp  SelectedTaskDetailsPanel.hpp  TaskIndexView.cpp  TaskIndexView.hpp
tests/: CMakeLists.txt  TaskRepositoryTest.cpp
view/: CMakeLists.txt  IView.cpp  IView.hpp  MainView.cpp  MainView.hpp  TaskCreateView.cpp  TaskCreateView.hpp  TaskIndexView.cpp  TaskIndexView.hpp
